# watson_tts_proxy

./: INSTALL_WINDOWS.rst  README.rst  proxy.py  requirements.txt  setup.cfg  watson_tts.py  watson_tts_proxy.py  watson_tts_proxy_client.py
watson_tts/: watson_tts_proxy.py  watson_tts_proxy_client.py
